force-app/main/default/objects/Lineup__c/Lineup__c.object-meta.xml
<CustomObject>
    <label>Lineup</label>
    <nameField>
        <label>Lineup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lineups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>