force-app/main/default/objects/Lineup__c/fields/Captain__c.field-meta.xml
<CustomField>
    <fullName>Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team captain for this match</description>
    <label>Captain</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lineups (Captain)</relationshipLabel>
    <relationshipName>Lineups_Captain</relationshipName>
    <type>Lookup</type>
</CustomField>