force-app/main/default/objects/Lineup__c/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <description>Extracted formation (4-3-3, 4-4-2)</description>
    <label>Formation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>