force-app/main/default/objects/Lineup__c/fields/Formation_Type__c.field-meta.xml
<CustomField>
    <fullName>Formation_Type__c</fullName>
    <label>Formation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-4-2</fullName>
            </value>
            <value>
                <fullName>4-3-3</fullName>
                <default>true</default>
                <label>4-3-3</label>
            </value>
            <value>
                <fullName>3-5-2</fullName>
            </value>
            <value>
                <fullName>4-2-3-1</fullName>
            </value>
            <value>
                <fullName>5-3-2</fullName>
            </value>
            <value>
                <fullName>4-4-1-1</fullName>
            </value>
            <value>
                <fullName>3-4-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>