force-app/main/default/objects/Lineup__c/fields/Lineup_JSON__c.field-meta.xml
<CustomField>
    <fullName>Lineup_JSON__c</fullName>
    <description>JSON representation of the lineup including players, positions, and bench</description>
    <label>Lineup JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>