force-app/main/default/objects/Lineup__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Lineups</relationshipLabel>
    <relationshipName>Lineups</relationshipName>
    <type>Lookup</type>
</CustomField>