force-app/main/default/objects/Lineup__c/fields/Match_Level__c.field-meta.xml
<CustomField>
    <fullName>Match_Level__c</fullName>
    <formula>TEXT(Match__r.Match_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Level</label>
    <description>Inherited from parent Match - Classification level for the match</description>
    <type>Text</type>
</CustomField>