force-app/main/default/objects/Lineup__c/fields/Related_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Related_Fixture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fixture</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lineups</relationshipLabel>
    <relationshipName>Lineups</relationshipName>
    <type>Lookup</type>
</CustomField>