force-app/main/default/objects/Lineup__c/fields/Sport_Type__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type__c</fullName>
    <description>Inherit from Team__c or set manually. Determines which stats to display in lineup builder.</description>
    <label>Sport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>NFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>