force-app/main/default/objects/Lineup__c/fields/Starting_XI_Count__c.field-meta.xml
<CustomField>
    <fullName>Starting_XI_Count__c</fullName>
    <description>Count of starting players</description>
    <label>Starting XI Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>