force-app/main/default/objects/Lineup__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lineups</relationshipLabel>
    <relationshipName>Lineups</relationshipName>
    <type>Lookup</type>
</CustomField>